2002-02-19  Anders Carlsson  <andersca@gnu.org>

	* configure.in: Up to 1.112.0

2002-02-18  Gediminas Paulauskas <menesis@delfi.lt>

	* configure.in: remove GNOME_COMMON_INIT, GNOME_PLATFORM_GNOME_2
	macros, fix warning macro to match latest gnome-common.

2002-02-17  Zbigniew Chyla  <cyba@gnome.pl>

	* configure.in (ALL_LINGUAS): Added pl (Polish).

2002-02-15  jacob berkman  <jacob@ximian.com>

	*   libgnome/gnome-exec.c  (gnome_prepend_terminal_to_vector): the
	key is "exec_arg" not "exec_flag" (according to the .schemas file)

2002-02-14  Mark McLoughlin  <mark@skynet.ie>

	* libgnome/gnome-help.c: (gnome_help_display_with_doc_id):
	don't free the path before using it in g_error_set.

2002-02-11  Anders Carlsson  <andersca@gnu.org>

	* configure.in: Release 1.111.0

	* gnome-data/*: Rename .soundlist files so that they won't conflict with
	gnome-libs, fixing #70324.

2002-02-10  Richard Hestilow  <hestilow@ximian.com>

	* schemas/desktop_gnome_interface.schemas: Add gtk_theme, font_name, and use_custom_font settings.

2002-02-09  Pauli Virtanen  <ptvirtan@cc.hut.fi>

	* configure.in (ALL_LINGUAS): Added "fi" (Finnish).

2002-02-09  Darin Adler  <darin@bentspoon.com>

	* configure.in: Improve message when popt is missing.
	* help-converters/gnome-vfs-module/help-method.c: Remove unneeded include that
	causes trouble with the latest gnome-vfs.

2002-02-07  Changwoo Ryu  <cwryu@debian.org>

	* configure.in (ALL_LINGUAS): Added "ko".

2002-01-31 John Fleck <jfleck@inkstain.net>

	* help-converters/docbook/gnome-db2html3.c
	output "filename" rather than "filename.xml" for Eric's stylesheets

2002-01-29  Anders Carlsson  <andersca@gnu.org>

	* configure.in: Up to 1.110.0

	* schemas/desktop_gnome_peripherals_mouse.schemas: Change motion_threshold type
	to int.

2002-01-28  Ross Golder  <ross@golder.org>

	* configure.in: Updated popt URL.

2002-01-25  Darin Adler  <darin@bentspoon.com>
