@@ -1,3 +1,10 @@
+2002-02-19 John Fleck <jfleck@inkstain.net>
+
+	* help-converters/docbook/gnome-db2html3.c
+	remove old code checking for sgml catalog files. This was
+	causing major slowdown for some users (like, for example,
+	me)
+
 2002-02-19  Anders Carlsson  <andersca@gnu.org>
 
 	* configure.in: Up to 1.112.0
